--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ description: Blogging stuff just for fun
 
 # List of links in the navigation bar
 navbar-links:
+  Image Processing: "Image-Processing"
   About Me: "aboutme"
   Resume: "resume"
 #  Resources:
